--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [Network]
-ip=0.0.0.0
-port=443
+ip = 0.0.0.0
+port = 443
+[Security]
+secret_key = "b'\x912\xf7\x8a\xec\xf9\xac\x92\x9e\xba\xeas\xbd\x88\x19\xc7T\xc1\xb7n*\xe0\x96\xfc'"
 [Development]
-flask_debug=False
+flask_debug = False
