--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,11 @@
-[Network]
+[Web]
 ip = 0.0.0.0
 port = 443
+[FTP]
+ip = 0.0.0.0
+port = 21
+max_connections = 256
+max_connections_per_ip = 5
 [Security]
 secret_key = "b'\x912\xf7\x8a\xec\xf9\xac\x92\x9e\xba\xeas\xbd\x88\x19\xc7T\xc1\xb7n*\xe0\x96\xfc'"
 [Development]
